--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "open:qa": "./node_modules/.bin/cypress open --env configFile=qa"
   },
   "devDependencies": {
-    "cypress": "^3.1.0",
+    "cypress": "^3.1.5",
     "mocha": "^5.2.0",
-    "mochawesome": "^3.1.1"
+    "mochawesome": "^3.1.1",
+    "ssh2-sftp-client": "^2.4.3"
   },
   "dependencies": {
+    "cypress-eslint-preprocessor": "^1.2.2",
+    "cypress-image-snapshot": "^3.0.0",
+    "eslint-plugin-cypress": "^2.2.0",
     "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
     "uuid": "^3.3.2"
