add docker support and eslint

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 node_modules
 cypress/videos
-cypress/screeshots
+cypress/screenshots/
 .idea/
 test-report/
 .DS_Store
 cypress/.DS_Store
 cypress/snapshots/
-
