--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.0",
   "description": "Using Cypress which covers basic and advanced use.",
   "scripts": {
+    "clearReports": "rm -rf cypress/reports/",
     "test": "./testRunner.sh",
-    "open:local": "./node_modules/.bin/cypress open --env configFile=local",
-    "open:dev": "./node_modules/.bin/cypress open --env configFile=dev",
-    "open:qa": "./node_modules/.bin/cypress open --env configFile=qa",
-    "run:qa": "./node_modules/.bin/cypress run --browser chrome --env configFile=qa",
+    "open:local": "cypress open --env configFile=local",
+    "open:dev": "cypress open --env configFile=dev",
+    "open:qa": "cypress open --env configFile=qa",
+    "run:local": "cypress run --browser chrome --env configFile=local",
+    "record": "--record --key d1a610da-a97d-4176-b134-42a6999ae1e7",
+    "mergeReport": "mochawesome-merge cypress/reports/mochawesome-report/mochawesome*.json>cypress/reports/mochawesome-report/combineReport.json",
+    "generateHTMLReport": "marge cypress/reports/mochawesome-report/combineReport.json --reportDir cypress/reports/mochawesome-report/ --inline",
     "update": "cypress run --env updateSnapshots=true",
     "lint": "./node_modules/.bin/eslint cypress/",
     "fixLint": "./node_modules/.bin/eslint cypress/ --fix"
   },
   "devDependencies": {
-    "cypress": "^10.3.0",
+    "cypress": "^12.3.0",
     "mocha": "^10.0.0",
     "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.2",
     "ssh2-sftp-client": "^9.0.1"
   },
   "dependencies": {
