--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "open:dev": "cypress open --env configFile=dev",
     "open:qa": "cypress open --env configFile=qa",
     "run:local": "cypress run --browser chrome --env configFile=local",
-    "record": "--record --key d1a610da-a97d-4176-b134-42a6999ae1e7",
+    "run:qa": "cypress run --browser electron --env configFile=qa",
     "generateHTMLReport": "mochawesome-merge cypress/reports/mochawesome-report/mochawesome*.json>cypress/reports/mochawesome-report/combineReport.json && marge cypress/reports/mochawesome-report/combineReport.json --reportDir cypress/reports/mochawesome-report/ --inline",
     "update": "cypress run --env updateSnapshots=true",
     "lint": "./node_modules/.bin/eslint cypress/",
@@ -17,19 +17,19 @@
   },
   "devDependencies": {
     "cypress": "^12.3.0",
-    "mocha": "^10.0.0",
+    "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.2",
     "ssh2-sftp-client": "^9.0.1"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "cypress-eslint-preprocessor": "^1.2.2",
     "cypress-image-diff": "^2.0.0",
-    "eslint-plugin-chai-friendly": "^0.5.0",
-    "eslint-plugin-cypress": "^2.2.0",
-    "rimraf": "^2.6.3",
-    "shelljs": "^0.8.3",
-    "uuid": "^3.3.2"
+    "eslint-plugin-chai-friendly": "^0.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "rimraf": "^4.1.1",
+    "shelljs": "^0.8.5",
+    "uuid": "^9.0.0"
   }
 }
