--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 node_modules
 cypress/videos
-cypress/screenshots/
 .idea/
 .DS_Store
 cypress/.DS_Store
 cypress/snapshots/
 reports/
+./cypress-visual-report
+./cypress-visual-screenshots/comparison
+./cypress-visual-screenshots/diff
