--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ cypress/videos
 .idea/
 .DS_Store
 cypress/.DS_Store
-cypress/snapshots/
-reports/
-./cypress-visual-report
-./cypress-visual-screenshots/comparison
-./cypress-visual-screenshots/diff
+cypress/reports/
+cypress/screenshots/
+cypress-visual-report
+./cypress-visual-screenshots/comparison/
+./cypress-visual-screenshots/diff/
